# bls_mcp

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  start_public_server.sh
docs/: CHATGPT_INTEGRATION.md  CLAUDE_DESKTOP_SETUP.md  NGROK_SETUP.md  PHASE1_COMPLETE.md  PHASE1_FINAL_REPORT.md  PHASE2_VISUALIZATION_COMPLETE.md  QUICK_START.md  SERVER_FIXED.md  SSE_VISUALIZATION_UPDATE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_SOLVED.md  UV_SETUP_COMPLETE.md  UV_USAGE.md  VISUALIZATION.md
scripts/: start_ngrok.py  start_server.py  test_mcp_client.py  test_sse_viz.py  test_visualization.py  uv_start_server.sh  uv_test.sh  uv_test_client.sh
src/bls_mcp/: __init__.py  server.py
src/bls_mcp/data/: mock_data.py
src/bls_mcp/data/fixtures/: cpi_series.json  historical_data.json
src/bls_mcp/tools/: base.py  get_series.py  get_series_info.py  list_series.py  plot_series.py
src/bls_mcp/transports/: sse.py
src/bls_mcp/utils/: logger.py  validators.py
tests/: test_mock_data.py  test_plot_series.py  test_tools.py
