[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bls-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for Bureau of Labor Statistics data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "rafael"}
]
maintainers = [
    {name = "rafael"}
]
keywords = ["mcp", "bls", "bureau-of-labor-statistics", "model-context-protocol", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
sse = [
    "uvicorn>=0.24.0",
    "sse-starlette>=1.6.0",
    "pyngrok>=7.0.0",
]
viz = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/kovashikawa/bls_mcp"
Repository = "https://github.com/kovashikawa/bls_mcp.git"
Documentation = "https://github.com/kovashikawa/bls_mcp#readme"

[project.scripts]
bls-mcp = "bls_mcp.server:main"
bls-mcp-ngrok = "bls_mcp.server:main_ngrok"

[tool.hatch.build.targets.wheel]
packages = ["src/bls_mcp"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",  # pycodestyle errors
    "F",               # pyflakes
    "W",               # pycodestyle warnings
    "B",               # flake8-bugbear
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp.*", "pyngrok.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
